# runonboot

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: macos.py  windows.py
runonboot/: __init__.py  main.py
runonboot/booton/: __init__.py  bootonLinux.py  bootonPlatform.py  bootonWindows.py  bootonmacOS.py
runonboot/booton/bootonWindows/: bootonWindows.py  uacHelper.py
runonboot/helper/: __init__.py  helper.py
runonboot/runner/: PythonRunner.py  Runner.py  __init__.py
